fixed word arap on mobile devices for my name and corrected the left alignment of contacts

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -39,6 +39,7 @@ to be included in all the css files to be generated */
 	line-height: 1.2;
 	padding: 15px 0 0;
 	text-align: center;
+	word-wrap: nowrap;
 
 	@include responsive-unit("font-size", "px", str-slice(#{$font_size_6}, 1 , -3), str-slice(#{$font_size_7}, 1 , -3), 320, 640);
 	@media #{$medium-and-up} {
@@ -82,7 +83,7 @@ to be included in all the css files to be generated */
 	padding-left: 30px;
 	padding-top:  20px;
 	@media #{$small-and-down} {
-		justify-content: center;
+		justify-content: flex-start;
 		min-width: 	266px;	
 	}
 }
